gnome-clocks (46.0-1) UNRELEASED; urgency=medium

  * New upstream release

 -- Amin Bandali <bandali@ubuntu.com>  Tue, 19 Mar 2024 10:42:55 -0400

gnome-clocks (45.0-1) unstable; urgency=medium

  * New upstream release
  * Bump minimum libadwaita to 1.4~beta
  * Drop obsolete gsound dependency

 -- Jeremy Bícha <jbicha@ubuntu.com>  Mon, 18 Sep 2023 07:15:51 -0400

gnome-clocks (44.0-2) unstable; urgency=medium

  * Release to unstable

 -- Jeremy Bícha <jbicha@ubuntu.com>  Fri, 21 Jul 2023 12:55:46 -0400

gnome-clocks (44.0-1) experimental; urgency=medium

  * New upstream release

 -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 27 Mar 2023 12:13:54 -0400

gnome-clocks (44~beta-2) experimental; urgency=medium

  * Add debian/upstream/metadata
  * Update standards version to 4.6.2, no changes needed

 -- Jeremy Bicha <jbicha@ubuntu.com>  Thu, 23 Feb 2023 18:00:32 -0500

gnome-clocks (44~beta-1) experimental; urgency=medium

  * New upstream release
  * debian/control.in: Bump minimum vala to 0.56.4 & gnome-desktop to 44~beta

 -- Jeremy Bicha <jbicha@ubuntu.com>  Tue, 14 Feb 2023 08:06:35 -0500

gnome-clocks (43.0-1) unstable; urgency=medium

  * New upstream release
  * debian/control.in: Set Rules-Requires-Root: no
  * debian/control.in: Bump Standards-Version to 4.6.1

 -- Jeremy Bicha <jbicha@ubuntu.com>  Tue, 20 Sep 2022 10:56:49 -0400

gnome-clocks (43~beta-2) unstable; urgency=medium

  * Build against libsoup3 libraries

 -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 05 Sep 2022 16:25:39 -0400

gnome-clocks (43~beta-1) unstable; urgency=medium

  * New upstream release
  * debian/control.in: Bump minimum libadwaita to 1.2~alpha
  * Drop all patches: no longer needed

 -- Jeremy Bicha <jbicha@ubuntu.com>  Mon, 08 Aug 2022 19:10:32 -0400

gnome-clocks (42.0-1) unstable; urgency=medium

  * New upstream release
  * Switch to GTK4, libadwaita, gnome-desktop4, & libgweather4
  * debian/control.in: Bump minimum meson to 0.59.0
  * Drop patch: applied in new release