@@ -1,37 +1,0 @@
-Source: gnome-clocks
-Section: gnome
-Priority: optional
-Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
-Uploaders: @GNOME_TEAM@
-Build-Depends: appstream,
-               appstream-util <!nocheck>,
-               debhelper-compat (= 13),
-               desktop-file-utils <!nocheck>,
-               dh-sequence-gnome,
-               itstool,
-               libadwaita-1-dev (>= 1.4~beta),
-               libgeoclue-2-dev (>= 2.4),
-               libgeocode-glib-dev (>= 3.26.3),
-               libgirepository1.0-dev,
-               libglib2.0-dev (>= 2.68),
-               libgnome-desktop-4-dev (>= 44~beta),
-               libgtk-4-dev (>= 4.5),
-               libgweather-4-dev (>= 4.1),
-               libxml2-utils,
-               meson (>= 0.59.0),
-               pkg-config,
-               valac (>= 0.56.4)
-Standards-Version: 4.6.2
-Rules-Requires-Root: no
-Vcs-Browser: https://salsa.debian.org/gnome-team/gnome-clocks
-Vcs-Git: https://salsa.debian.org/gnome-team/gnome-clocks.git
-Homepage: https://wiki.gnome.org/Apps/Clocks
-
-Package: gnome-clocks
-Architecture: any
-Depends: geoclue-2.0,
-         ${misc:Depends},
-         ${shlibs:Depends}
-Description: Simple GNOME app with stopwatch, timer, and world clock support
- GNOME Clocks is a simple application to show the time and date in multiple
- locations and set alarms or timers. A stopwatch is also included.
