@@ -5,3 +5,6 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,-O1 -Wl,-z,defs
 
 %:
 	dh $@
+
+override_dh_gnome_clean:
+	dh_gnome_clean --no-control
